2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>
	
	* src/gnu/localegen/JavaGenerator.java
	(StringContent): Do not convert to escaped strings as it is done
	afterward.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(generateContents): Keep the comma at the end of the
	array. Convert the data string into an escaped string.
	(ManualListContent.generateContent): Likewise.
	(TimeZoneContent.generateContent): Likewise.
	(generate): Delete the output file if it should be empty.

	* src/gnu/localegen/Main.java
	(main): Accept any number of files on the command line.
	
	* src/gnu/currencygen/Main.java
	(startElement, endElement): Retrieve the info and fractions
	element. Generate a key pair <country>.currency and
	<country>.fractionDigits.
	
2004-12-01  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateContent): Always print commas after array entries.

2004-12-01  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateContent): Content has to be of type String/String[].

2004-11-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(OrderedListContent.generateContent): Print null if there is not any
	object corresponding to the ordering element.

2004-11-14  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java: Add a way to add nulls at the
	end of ordered lists. This was needed f list with month names.

2004-11-14  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java:
	Generate output file only if it will contain some locale data.

2004-11-13  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(computeCalendar): Removed obsolete comment.

2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(TimeZoneContent.generateContent): Order zone names according to Java
	standard.

2004-11-13  Guilhem Lavaux  <guilhem@kaffe.org>
